--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <appengine.target.version>1.8.7</appengine.target.version>
+    <appengine.target.version>1.9.10</appengine.target.version>
   </properties>
 
   <build>
@@ -18,8 +18,13 @@
                   <groupId>com.google.appengine</groupId>
                   <artifactId>appengine-maven-plugin</artifactId>
                   <version>${appengine.target.version}</version>
+                  <configuration>
+                      <enableJarClasses>false</enableJarClasses>
+                      <port>8080</port>
+                      <address>0.0.0.0</address>
+                  </configuration>
               </plugin>
-          </plugins>
+      </plugins>
       </pluginManagement>
   </build>
   <modules>
