--- a/rssify-war/pom.xml
+++ b/rssify-war/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.3</version>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
