--- a/rssify-war/src/main/webapp/WEB-INF/web.xml
+++ b/rssify-war/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
     <servlet>
         <servlet-name>rss</servlet-name>
-        <servlet-class>com.google.appengine.rssify.RssServlet</servlet-class>
+        <servlet-class>com.google.appengine.rssify.servlets.RssServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>rss</servlet-name>
