Updated readme Reintroduce link in rss readme Refactor send 404 Bogleheads.org parser Support HN as well Dynamic routes More RSS Implement RSS

--- a/rssify-war/pom.xml
+++ b/rssify-war/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>jsoup</artifactId>
             <version>1.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>rome</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.0</version>
+        </dependency>
 
         <!-- Test Dependencies -->
         <dependency>
