Fix bugs and update to Java 8

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-target/
-build/
-.gradle
-datanucleus.log
-.DS_Store
-out
-*.iml
-*.ipr
-*.iws
-.idea
-.settings
-.classpath
-.project
+/target/
+/.idea/
